apps/rsshub/deploy-service-rss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: service-rss
  name: service-rss
  namespace: rsshub
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: service-rss
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2022-04-14T13:14:00Z"
        kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
        kompose.version: 1.26.1 (a9d05d509)
        kubectl.kubernetes.io/restartedAt: "2023-09-27T12:04:10+08:00"
      creationTimestamp: null
      labels:
        io.kompose.service: service-rss
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: database-postgres
            - name: DB_PASS
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: SELF_URL_PATH
              value: https://ttrss.flamorz.com/
          image: wangqiru/ttrss:latest
          imagePullPolicy: Always
          name: ttrss
          ports:
            - containerPort: 80
              name: 80tcp
              protocol: TCP
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /var/www/feed-icons/
              name: feed-icons
          resources:
            requests:
              cpu: 31m
              memory: 110Mi
            limits:
              memory: 110Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      tolerations:
        - effect: NoSchedule
          key: node.kubernetes.io/unschedulable
          operator: Exists
      volumes:
        - name: feed-icons
          persistentVolumeClaim:
            claimName: feed-icons
